# web-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  README.md  cabal.project  flake.nix  jwk.json  web-server.cabal
config-hkd/: config-hkd.cabal
config-hkd/src/Config/: Fetchers.hs
config-hkd/test/: Main.hs
config-hkd/test/Config/: FetchersSpec.hs
example/: CHANGELOG.md  TAGS  example-server.cabal  example.cabal
example/app/: Main.hs
example/migrations/: 20240414194357_create_mailing_list_table.sql  20240416174714_create_users_table.sql  20240706200955_create_server_sessions.sql  20241210235033_add_images_table.sql  20250101000000_create_users_table.sql  20251129000000_create_user_metadata.sql
example/src/: API.hs  API.hs-boot  App.hs  Utils.hs  View.hs
example/src/API/: Get.hs
example/src/API/About/: Get.hs
example/src/API/Admin/: Get.hs
example/src/API/Admin/Blog/: Get.hs
example/src/API/Blog/: Delete.hs  Get.hs
example/src/API/Blog/Id/: Delete.hs  Get.hs
example/src/API/Blog/New/: Get.hs  Post.hs
example/src/API/Dashboard/: Get.hs
example/src/API/Home/: Get.hs
example/src/API/Image/: Post.hs
example/src/API/MailingList/: Post.hs
example/src/API/Markdown/: Post.hs
example/src/API/Store/: Delete.hs  Get.hs
example/src/API/Store/Id/: Delete.hs  Get.hs
example/src/API/Store/New/: Get.hs  Post.hs
example/src/API/User/: Delete.hs  Get.hs
example/src/API/User/Current/: Get.hs
example/src/API/User/Id/: Get.hs
example/src/API/User/Login/: Get.hs  Post.hs
example/src/API/User/Logout/: Get.hs  Post.hs
example/src/API/User/PasswordReset/: Post.hs
example/src/API/User/Register/: Get.hs  Post.hs
example/src/App/: Auth.hs  Config.hs  Context.hs  Monad.hs
example/src/App/Auth/: Network.hs
example/src/App/Config/: Fetchers.hs
example/src/Component/: NavBar.hs
example/src/Component/Forms/: BlogPost.hs  Login.hs  Product.hs
example/src/Domain/Types/: AdminStatus.hs  DisplayName.hs  OptionalField.hs
example/src/Effects/: Clock.hs  MailSender.hs  Observability.hs
example/src/Effects/Database/: Execute.hs  SerializedStatement.hs
example/src/Effects/Database/Queries/: UserWithMetadata.hs
example/src/Effects/Database/Tables/: BlogPosts.hs  MailingList.hs  ServerSessions.hs  User.hs  UserMetadata.hs
example/src/Lucid/: Extras.hs
example/src/OrphanInstances/: CaseInsensitive.hs  IPRange.hs  NonEmptyText.hs  OneRow.hs  Password.hs  Servant.hs  UTCTime.hs  UUID.hs
example/test/API/Blog/Id/: DeleteSpec.hs
example/test/API/User/: DeleteSpec.hs  GetSpec.hs
example/test/API/User/Id/: GetSpec.hs
example/test/Effects/Database/Tables/: BlogPostsSpec.hs  ImagesSpec.hs  ServerSessionsSpec.hs  UserSpec.hs
example/test/Test/Database/: Expectation.hs  Monad.hs
example/test/Test/Database/Property/: Assert.hs
servant-auth-roles/: CHANGELOG.md  TUTORIAL.md  servant-auth-roles.cabal
servant-auth-roles/src/Servant/Auth/: Roles.hs
servant-auth-roles/src/Servant/Auth/Roles/: TH.hs
servant-auth-roles/test/: Spec.hs
servant-auth-roles/test/Servant/Auth/: RolesErrorFixture.hs  RolesSpec.hs
server/: server.cabal
server/app/: Main.hs
server/migrations/: 20240416174714_create_users_table.sql  20240706200955_create_server_sessions.sql  20241204180710_add_thumbnail_to_blog_posts.sql  20241210235033_add_images_table.sql  20241211021620_add_blog_posts_table.sql  20250423071015_add_store_tables.sql
server/src/: API.hs  API.hs-boot  App.hs  Utils.hs
server/src/API/: Get.hs
server/src/API/About/: Get.hs
server/src/API/Admin/: Get.hs
server/src/API/Blog/: Delete.hs  Get.hs
server/src/API/Blog/Id/: Get.hs  (+2 more)
server/src/API/Image/: Post.hs
server/src/API/MailingList/: Post.hs
server/src/API/Markdown/: Post.hs
server/src/API/Static/: Get.hs
server/src/API/Store/: Delete.hs
server/src/API/User/: Get.hs
server/src/App/: Auth.hs  Config.hs  Context.hs  Errors.hs  Monad.hs
server/src/App/Config/: Fetchers.hs
server/src/App/Errors/: HTML.hs
server/src/Component/: Frame.hs  NavBar.hs
server/src/Component/Forms/: BlogPost.hs  Login.hs  Register.hs
server/src/Domain/Types/: Amount.hs  DisplayName.hs  EmailAddress.hs  FullName.hs  InvalidField.hs  ProductName.hs
server/src/Effects/: MailSender.hs  Observability.hs
server/src/Effects/Database/: Class.hs  Execute.hs  SerializedStatement.hs
server/src/Lucid/: Extras.hs
server/src/OrphanInstances/: Day.hs  MultipartData.hs  Servant.hs
server/src/Text/: HTML.hs
server/static/: styles.css
server/test/: Spec.hs
server/test/API/User/: DeleteSpec.hs  GetSpec.hs
server/test/Test/Database/: Monad.hs  Setup.hs
web-server-core/: CHANGELOG.md  TAGS  web-server-core.cabal
web-server-core/migrations/: 20250101000001_create_server_sessions.sql
web-server-core/src/: App.hs
web-server-core/src/App/: Auth.hs  Config.hs  Context.hs  Monad.hs  Observability.hs
web-server-core/src/Domain/Types/: EmailAddress.hs  FullName.hs
web-server-core/src/Effects/: Clock.hs  Observability.hs
web-server-core/src/Effects/Database/: Class.hs  Execute.hs  SerializedStatement.hs
web-server-core/src/Lucid/: Extras.hs
web-server-core/src/OrphanInstances/: NonEmptyText.hs  OneRow.hs  Password.hs
web-server-core/src/Text/: HTML.hs
web-server-core/test/: Main.hs
web-server-core/test/App/: AuthSpec.hs
web-server-core/test/Test/Database/: Monad.hs  Property.hs
web-server-otel/: CHANGELOG.md  web-server-otel.cabal
web-server-otel/src/App/: Otel.hs
web-server-otel/src/App/Context/: Otel.hs
web-server-otel/src/Config/: Otel.hs
web-server-otel/src/Effects/: Observability.hs
web-server-otel/test/: Spec.hs
web-server-roles/: LICENSE  TUTORIAL.md  web-server-roles.cabal
web-server-roles/src/App/Auth/: Role.hs
web-server-roles/test/: Spec.hs
web-server-roles/test/App/Auth/: RoleErrorFixture.hs  RoleSpec.hs
xmlhtml-lens/: CHANGELOG.md  xmlhtml-lens.cabal
xmlhtml-lens/src/Text/XmlHtml/: Optics.hs
xmlhtml-lens/test/: Main.hs
xmlhtml-lens/test/data/: example00.html
xmlhtml-qq/: CHANGELOG.md  xmlhtml-qq.cabal
xmlhtml-qq/src/Text/XmlHtml/: QQ.hs
(+156 files in other folders)
