cabal-version:      3.0
name:               web-server
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable web-server
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base ^>=4.18.1.0
                  , web-server
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:  , aeson
                  , barbies
                  , base ^>=4.18.1.0
                  , base64
                  , binary
                  , bytestring
                  , case-insensitive
                  , cookie
                  , clock
                  , containers
                  , data-has
                  , deriving-aeson
                  , exceptions
                  , email-validate
                  , errors
                  , hasql
                  , hasql-pool
                  , hasql-interpolate
                  , hasql-transaction
                  , hs-opentelemetry-api
                  , hs-opentelemetry-exporter-handle
                  , hs-opentelemetry-instrumentation-wai
                  , hs-opentelemetry-sdk
                  , hs-opentelemetry-utils-exceptions
                  , htmx
                  , http-api-data
                  , http-media
                  , http-types
                  , iproute
                  , lens
                  , log-base
                  , mtl
		  , mime-mail
                  , network
                  , network-ip
                  , password
                  , servant-server
		  , smtp-mail
                  , string-interpolate
                  , text
                  , text-display
                  , time
                  , transformers
                  , uuid
                  , unix
                  , unliftio-core
                  , unordered-containers
                  , wai
                  , warp
                  , xmlhtml
  exposed-modules:
    App
    App.Auth
    App.Auth.Network
    App.Config
    App.Config.Fetchers
    App.Context
    App.Monad
    API
    API.About.Get
    API.Admin.Get
    API.MailingList.Post
    API.Get
    API.Static.Get
    API.User.Get
    API.User.Current.Get
    API.User.Delete
    API.User.Id.Get
    API.User.Login.Get
    API.User.Login.Post
    API.User.Logout.Get
    API.User.Logout.Post
    API.User.PasswordReset.Post
    API.User.Register.Get
    API.User.Register.Post
    Component.NavBar
    Domain.Types.AdminStatus
    Domain.Types.DisplayName
    Domain.Types.EmailAddress
    Effects.Clock
    Effects.Database.Class
    Effects.Database.Execute
    Effects.Database.SerializedStatement
    Effects.Database.Tables.User
    Effects.Database.Tables.MailingList
    Effects.Database.Tables.ServerSessions
    Effects.MailSender
    Effects.Observability
    Errors
    OrphanInstances.CaseInsensitive
    OrphanInstances.IPRange
    OrphanInstances.OneRow
    OrphanInstances.Password
    OrphanInstances.Servant
    OrphanInstances.UTCTime
    OrphanInstances.UUID
    Text.XmlHtml.Optics
    Utils
    Utils.HTML

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded

--------------------------------------------------------------------------------

test-suite tests
  import: common-extensions
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
     API.User.DeleteSpec
     API.User.GetSpec
     API.User.Id.GetSpec
     Effects.Database.Tables.UserSpec
     Effects.Database.Tables.MailingListSpec
     Effects.Database.Tables.ServerSessionsSpec
     Test.Database.Expectation
     Test.Gen.DisplayName
     Test.Gen.EmailAddress
     Test.Gen.Network
     Test.Gen.Password
     Test.Gen.Time
     Test.Database.Monad
     Test.Database.Property
     Test.Database.Property.Assert
     Test.Database.Setup
  hs-source-dirs:
    test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:
      base
    , bytestring
    , containers
    , exceptions
    , data-has
    , hasql
    , hasql-interpolate
    , hasql-pool
    , hasql-transaction
    , hedgehog
    , hs-opentelemetry-api
    , hs-opentelemetry-sdk
    , hspec
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , iproute
    , log-base
    , mtl
    , password
    , postgres-options
    , text
    , time
    , tmp-postgres
    , typed-process
    , unliftio-core
    , uuid
    , web-server
