cabal-version:      3.4
name:               config-hkd
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             solomon
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-options
  default-extensions:
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
      TypeOperators
  ghc-options: -Wall

--------------------------------------------------------------------------------

library
    import:           common-options
    exposed-modules:  Config.Fetchers
    build-depends:    base ^>=4.18.2.1
                    , barbies
                    , mtl
                    , text
                    , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

--------------------------------------------------------------------------------

test-suite config-hkd-test
    import:           common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Config.FetchersSpec
    build-depends:
        base ^>=4.18.2.1,
        config-hkd,
        hspec,
        text
