cabal-version: 3.0
name:          servant-auth-roles
version:       0.1.0.0
synopsis:      Type-level role-based authorization combinators for Servant
description:
  Declarative, type-level role authorization for Servant. Define a plain role
  enum, run one Template Haskell splice on it, and gate routes with
  @RequireRole "tag" 'YourRole@. The combinator authenticates, checks the role
  against a relation you pick (hierarchy, exact match, or permission-set
  membership), and hands the handler a compile-time proof that the check passed.
  See TUTORIAL.md to get started and INTEGRATION.md to add it to an existing
  AuthProtect app.

license:       BSD-3-Clause
license-file:  LICENSE
author:        KPBJ
maintainer:    tech@kpbj.fm
category:      Web
build-type:    Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    Servant.Auth.Roles
    Servant.Auth.Roles.TH

  build-depends:
    , base             >=4.14 && <5
    , bytestring       >=0.10 && <0.13
    , servant          >=0.19 && <0.21
    , servant-server   >=0.19 && <0.21
    , singletons       >=3.0 && <3.2
    , singletons-base  >=3.3 && <3.5
    , singletons-th    >=3.3 && <3.5
    , template-haskell >=2.21 && <2.23
    , wai              >=3.2 && <3.3

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

test-suite servant-auth-roles-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Servant.Auth.RolesErrorFixture
    Servant.Auth.RolesSpec
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , base           >=4.14 && <5
    , bytestring     >=0.10 && <0.13
    , hspec          >=2.11 && <2.12
    , hspec-wai      >=0.12 && <0.13
    , http-types     >=0.12 && <0.13
    , mtl             >=2.3 && <2.4
    , servant         >=0.19 && <0.21
    , servant-server  >=0.19 && <0.21
    , singletons      >=3.0 && <3.2
    , singletons-base >=3.3 && <3.5
    , singletons-th   >=3.3 && <3.5
    , wai             >=3.2 && <3.3
    , servant-auth-roles

  default-extensions:
    DataKinds
    EmptyCase
    GADTs
    OverloadedStrings
    StandaloneKindSignatures
    TemplateHaskell
    TypeFamilies
    TypeOperators
    UndecidableInstances
