cabal-version:      3.4
name:               web-server-core
version:            0.1.0.0
homepage:           http://www.github.com/solomon-b/web-server
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

common common-warnings
    ghc-options:    -Wall -threaded

--------------------------------------------------------------------------------

library
    import:           common-extensions, common-warnings
    build-depends:    base >=4.19.2.0
                    , aeson
                    , barbies
                    , binary
                    , bytestring
                    , case-insensitive
                    , cookie
                    , data-has
                    , errors
                    , exceptions
                    , hasql
                    , hasql-interpolate
                    , hasql-pool
                    , hs-opentelemetry-api
                    , hs-opentelemetry-exporter-handle
                    , hs-opentelemetry-instrumentation-wai
                    , hs-opentelemetry-sdk
                    , http-media
                    , http-types
                    , iproute
                    , log-base
                    , lucid2
                    , mtl
                    , network
                    , password
                    , servant
                    , servant-server
                    , text
                    , text-display >= 1.0.0.0
                    , time
                    , transformers
                    , uuid
                    , unliftio-core
                    , unordered-containers
                    , unix
                    , wai
                    , warp
                    , xmlhtml
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:
      App
      App.Auth
      App.Config
      App.Config.Fetchers
      App.Context
      App.Errors
      App.Monad
      App.Observability
      OrphanInstances.IPRange
      OrphanInstances.UUID
      OrphanInstances.UTCTime
      OrphanInstances.Password
      Text.HTML

--------------------------------------------------------------------------------

test-suite web-server-core-test
    import:           common-extensions, common-warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.19.2.0
                    , web-server-core
