cabal-version:      3.4
name:               web-server-core
version:            0.1.0.0
homepage:           http://www.github.com/solomon-b/web-server
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

common common-warnings
    ghc-options:    -Wall -threaded

--------------------------------------------------------------------------------

library
    import:           common-extensions, common-warnings
    build-depends:    base >=4.19.2.0
                    , aeson
                    , barbies
                    , binary
                    , bytestring
                    , case-insensitive
                    , cookie
                    , data-has
                    , email-validate
                    , errors
                    , exceptions
                    , hasql
                    , hasql-interpolate
                    , hasql-pool
                    , hasql-transaction
                    , http-media
                    , http-types
                    , iproute
                    , log-base
                    , lucid2
                    , mtl
                    , network
                    , non-empty-text
                    , password
                    , servant
                    , servant-server
                    , text
                    , text-display >= 1.0.0.0
                    , time
                    , transformers
                    , uuid
                    , unliftio-core
                    , unordered-containers
                    , unix
                    , wai
                    , warp
                    , xmlhtml
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:
      App
      App.Auth
      App.Config
      App.Config.Fetchers
      App.Context
      App.Errors
      App.Monad
      Domain.Types.AdminStatus
      Domain.Types.DisplayName
      Domain.Types.EmailAddress
      Domain.Types.FullName
      Domain.Types.OptionalField
      Effects.Clock
      Effects.Database.Class
      Effects.Database.Execute
      Effects.Database.SerializedStatement
      Effects.Database.Tables.User
      Effects.Database.Tables.ServerSessions
      Lucid.Extras
      OrphanInstances.CaseInsensitive
      OrphanInstances.IPRange
      OrphanInstances.NonEmptyText
      OrphanInstances.OneRow
      OrphanInstances.UUID
      OrphanInstances.UTCTime
      OrphanInstances.Password
      OrphanInstances.Servant
      Text.HTML

--------------------------------------------------------------------------------

test-suite web-server-core-test
    import:           common-extensions, common-warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O0
    build-depends:    base >=4.19.2.0
                    , web-server-core
                    , bytestring
                    , containers
                    , exceptions
                    , data-has
                    , hasql
                    , hasql-interpolate
                    , hasql-pool
                    , hasql-transaction
                    , hedgehog
                    , hspec
                    , hspec-api
                    , hspec-core
                    , hspec-discover
                    , hspec-expectations
                    , hspec-hedgehog
                    , HUnit
                    , iproute
                    , log-base
                    , mtl
                    , password
                    , postgres-options
                    , string-interpolate
                    , text
                    , time
                    , tmp-postgres
                    , typed-process
                    , unliftio-core
                    , uuid
    other-modules:
       Effects.Database.Tables.ServerSessionsSpec
       Effects.Database.Tables.UserSpec
       Test.Database.Expectation
       Test.Database.Monad
       Test.Database.Property
       Test.Database.Property.Assert
       Test.Database.Setup
       Test.Gen.EmailAddress
       Test.Gen.Network
       Test.Gen.Password
       Test.Gen.Tables.Users
       Test.Gen.Time
